package={ edition='2024', name='terrain' }

[dependencies]
fehler='*'
bytemuck='*'
num={ git='https://github.com/Matthias-Fauconneau/num' }
vector={ git='https://github.com/Matthias-Fauconneau/vector' }
image={ git='https://github.com/Matthias-Fauconneau/image', features = ['exr']}
ui={ git='https://github.com/Matthias-Fauconneau/ui' }
vulkano={ git='https://github.com/vulkano-rs/vulkano', default-features=false } # same as ui (which needs drm modifier from git version)
vulkano-spirv={ git='https://github.com/Matthias-Fauconneau/vulkano-spirv' }

[build-dependencies]
naga={ version='*', features = ['wgsl-in','spv-out'] }
bytemuck='*'

[patch.'https://github.com/vulkano-rs/vulkano'] # Also switches vulkano dependency for vulkano-spirv to use same version
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier

[patch.crates-io] # In case vulkano-spirv would depend on crates-io version. But currently it tracks git version (breaking changes in vulkano::shader::spirv))
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={ path='../ui' }

#[patch.'https://github.com/Matthias-Fauconneau/vulkano-spirv'] # WIP SPIR-V to Rust interface
#vulkano-spirv={ path='../vulkano-spirv' }
